[tool.poetry]
name = "md410_2020_conv_registree_list"
version = "0.1.0"
description = "Produce an Excel workbook of registrees"
authors = ["Kim van Wyk <vanwykk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "^1.3"
psycopg2-binary = "^2.8"
md410-2020-conv-common = "^0.8"
openpyxl = "^3.0.3"

[tool.poetry.dev-dependencies]
ptpython = "^2.0"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
